--- a/src/client/components/connection/connection.scss
+++ b/src/client/components/connection/connection.scss
@@ -10,12 +10,13 @@
   width: 100%;
   height: 100vh;
   min-height: 100vh;
+	z-index: 999;
 
   .icon {
     position: absolute;
 
-    right: $margin;
-    top: $margin;
+    left: $margin;
+    bottom: $margin;
 
     fill: $primary;
     display: block;
